DLF391 - Ajout de la gestion des batch definition et observations

--- a/Sheaft.Mailing/Templates/DeliveryForm.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryForm.cshtml
@@ -97,9 +97,9 @@
                             {
                                 <p>@batch.Number - DLC: @batch.DLC.Value.ToString("dd/MM/yyyy")</p>
                             }
-                            else if (batch.DLUO.HasValue)
+                            else if (batch.DDM.HasValue)
                             {
-                                <p>@batch.Number - DLUO: @batch.DLUO.Value.ToString("dd/MM/yyyy")</p>
+                                <p>@batch.Number - DDM: @batch.DDM.Value.ToString("dd/MM/yyyy")</p>
                             }
                             else
                             {
