--- a/Sheaft.Web.Manage/Views/Batches/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Batches/Edit.cshtml
@@ -57,12 +57,8 @@
             @Html.TextBoxFor(m => m.DLC, null, new {@class = "form-control"})
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.DLUO)
-            @Html.TextBoxFor(m => m.DLUO, null, new {@class = "form-control"})
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Comment)
-            @Html.TextAreaFor(m => m.Comment, new {@class = "form-control"})
+            @Html.LabelFor(m => m.DDM)
+            @Html.TextBoxFor(m => m.DDM, null, new {@class = "form-control"})
         </div>
         <br/>
         <a asp-controller="Batches" asp-action="Index" class="btn btn-light">
