DLF392 - Ajouter un template pour l'export des ventes

--- a/Sheaft.Mailing/Templates/DeliveriesExportFailedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveriesExportFailedEvent.cshtml
@@ -1,4 +1,4 @@
-﻿@model Sheaft.Mailing.PickingOrderExportMailerModel
+﻿@model Sheaft.Mailing.DeliveriesExportMailerModel
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html data-editor-version="2" class="sg-campaigns" xmlns="http://www.w3.org/1999/xhtml">
@@ -128,7 +128,7 @@
                                                             <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                                 <tr>
                                                                     <td role="module-content">
-                                                                        <p>Votre bon de préparation de commandes a échoué</p>
+                                                                        <p>Votre export des ventes a échoué</p>
                                                                     </td>
                                                                 </tr>
                                                             </table><table class="wrapper" role="module" data-type="image" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="649bdae0-971f-4b9c-a300-3be6d5571c37">
@@ -150,7 +150,7 @@
                                                             </table><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="66012643-c78e-430c-a7ea-044b41e1746a" data-mc-module-version="2019-10-22">
                                                                 <tbody>
                                                                     <tr>
-                                                                        <td style="padding:18px 0px 18px 0px; line-height:40px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><h1 style="text-align: center">ECHEC DE LA GÉNÉRATION DE VOTRE BON DE PREPARATION !</h1><div></div></div></td>
+                                                                        <td style="padding:18px 0px 18px 0px; line-height:40px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><h1 style="text-align: center">ECHEC DE LA GÉNÉRATION DE VOTRE EXPORT DES VENTES !</h1><div></div></div></td>
                                                                     </tr>
                                                                 </tbody>
                                                             </table><table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="d96ecd01-699e-481c-8197-d34b08d593d5" data-mc-module-version="2019-10-22">
@@ -158,9 +158,9 @@
                                                                     <tr>
                                                                         <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                             <div>
-                                                                                <div style="font-family: inherit; text-align: center">L'export de votre bon de préparation a échoué.</div>
+                                                                                <div style="font-family: inherit; text-align: center">L'export de vos ventes a échoué.</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
-                                                                                <div style="font-family: inherit; text-align: center">Vous pouvez relancer un export depuis votre module de gestion de commandes en cliquant sur le bouton ci-dessous.</div><div></div>
+                                                                                <div style="font-family: inherit; text-align: center">Vous pouvez relancer un export depuis votre module de gestion des livraisons.</div><div></div>
                                                                             </div>
                                                                         </td>
                                                                     </tr>
