--- a/Sheaft.Mailing/Templates/ObservationAddedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/ObservationAddedEvent.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Globalization
 @using Sheaft.Domain.Enum
-@model Sheaft.Mailing.BatchMailerModel
+@model Sheaft.Mailing.ObservationMailerModel
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html data-editor-version="2" class="sg-campaigns" xmlns="http://www.w3.org/1999/xhtml">
@@ -130,7 +130,7 @@
                                                         <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                             <tr>
                                                                 <td role="module-content">
-                                                                    <p>@Model.Username à répondu à votre commentaire</p>
+                                                                    <p>@Model.User a ajouté une observation</p>
                                                                 </td>
                                                             </tr>
                                                         </table>
@@ -157,7 +157,7 @@
                                                             <tr>
                                                                 <td style="padding:18px 0px 18px 0px; line-height:40px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                     <div>
-                                                                        <h1 style="text-align: center">REPONSE A VOTRE COMMENTAIRE</h1>
+                                                                    <h1 style="text-align: center">NOUVELLE OBSERVATION</h1>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -169,8 +169,30 @@
                                                                 <td style="padding:0px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                     <div>
 
-                                                                        <div style="font-family: inherit; text-align: center">@Model.Username à répondu à votre commentaire concernant le lot @Model.Number.</div>
-                                                                        <div style="font-family: inherit; text-align: center">Réponse: @Model.Comment.</div>
+                                                                        <div style="font-family: inherit; text-align: center">@Model.User a ajouté une observation.</div>
+                                                                        <div style="font-family: inherit; text-align: center">Remarque: @Model.Comment.</div>
+                                                                        
+                                                                        @if (Model.Products.Any())
+                                                                        {
+                                                                            <p>Cette observation porte sur les produits suivants :</p>
+                                                                            <ul>
+                                                                                @foreach (var product in Model.Products)
+                                                                                {
+                                                                                    <li>#@product.Reference - @product.Name</li>
+                                                                                }
+                                                                            </ul>
+                                                                        }
+                                                                        
+                                                                        @if (Model.Batches.Any())
+                                                                        {
+                                                                            <p>Cette observation porte sur les lots suivants :</p>
+                                                                            <ul>
+                                                                                @foreach (var batch in Model.Batches)
+                                                                                {
+                                                                                    <li>@batch.Number - @($"DLC/DDM: {batch.DLC:dd/MM/yyyy}{batch.DDM:dd/MM/yyyy}")</li>
+                                                                                }
+                                                                            </ul>
+                                                                        }
 
                                                                     </div>
                                                                 </td>
@@ -186,7 +208,7 @@
                                                                         <tbody>
                                                                         <tr>
                                                                             <td align="center" bgcolor="#009688" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                                                                                <a href="@Model.PortalUrl" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Voir la réponse</a>
+                                                                                <a href="@Model.PortalUrl" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Voir la remarque</a>
                                                                                 <br/>
                                                                                 <br/>
                                                                             </td>
