--- a/Sheaft.Mailing/Templates/DeliveryBatchFormsGeneratedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryBatchFormsGeneratedEvent.cshtml
@@ -183,7 +183,7 @@
                                                                         <tbody>
                                                                         <tr>
                                                                             <td align="center" bgcolor="#009688" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                                                                                <a href="@Model.Url" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Télécharger mes bons de livraisons</a>
+                                                                                <a href="@Model.Url" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Télécharger mes bons de livraison</a>
                                                                                 <br/>
                                                                                 <br/>
                                                                             </td>
