--- a/Sheaft.Mailing/Templates/RecallSentEvent.cshtml
+++ b/Sheaft.Mailing/Templates/RecallSentEvent.cshtml
@@ -128,7 +128,7 @@
                                                         <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                             <tr>
                                                                 <td role="module-content">
-                                                                    <p>@Model.Producer a lancé un rappel sur certains produits</p>
+                                                                    <p>@Model.ProducerName a lancé un rappel sur certains produits</p>
                                                                 </td>
                                                             </tr>
                                                         </table>
@@ -167,7 +167,7 @@
                                                                 <td style="padding:0px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                     <div>
                                                                         <div style="font-family: inherit; text-align: center">Bonjour @Model.User,</div>
-                                                                        <div style="font-family: inherit; text-align: center">@Model.Producer a lancé un rappel sur certains produits que vous avez commandé auparavant.</div>
+                                                                        <div style="font-family: inherit; text-align: center">@Model.ProducerName a lancé un rappel sur certains produits que vous avez commandé auparavant.</div>
                                                                         @if (Model.Products.Any())
                                                                         {
                                                                             <p>Ce rappel porte sur ces produits :</p>
