DLF487 - Ajout d'un minimum de commande pour les magasins avec forfait de livraison

--- a/Sheaft.Mailing/Templates/PurchaseOrderCreatedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/PurchaseOrderCreatedEvent.cshtml
@@ -190,6 +190,17 @@
                                                                                                     </tbody>
                                                                                                 </table>                                                                                                
                                                                                             }
+                                                                                            
+                                                                                            @if (Model.DeliveryFeesWholeSalePrice > 0)
+                                                                                            {
+                                                                                                <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="bf96e53e-449d-4d26-b55c-e35fc0c693ae" data-mc-module-version="2019-10-22">
+                                                                                                    <tbody>
+                                                                                                    <tr>
+                                                                                                        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">1</div><div></div></div></td>
+                                                                                                    </tr>
+                                                                                                    </tbody>
+                                                                                                </table>   
+                                                                                            }
                                                                                         </td>
                                                                                     </tr>
                                                                                 </tbody>
@@ -214,6 +225,17 @@
                                                                                                     </tbody>
                                                                                                 </table>                                                                                                
                                                                                             }
+                                                                                            
+                                                                                            @if (Model.DeliveryFeesWholeSalePrice > 0)
+                                                                                            {
+                                                                                                <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="bf96e53e-449d-4d26-b55c-e35fc0c693ae" data-mc-module-version="2019-10-22">
+                                                                                                    <tbody>
+                                                                                                    <tr>
+                                                                                                        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">Livraison</div><div></div></div></td>
+                                                                                                    </tr>
+                                                                                                    </tbody>
+                                                                                                </table>   
+                                                                                            }
                                                                                         </td>
                                                                                     </tr>
                                                                                 </tbody>
@@ -237,6 +259,17 @@
                                                                                                         </tr>
                                                                                                     </tbody>
                                                                                                 </table>                                                                                                
+                                                                                            }
+                                                                                            
+                                                                                            @if (Model.DeliveryFeesWholeSalePrice > 0)
+                                                                                            {
+                                                                                                <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="bf96e53e-449d-4d26-b55c-e35fc0c693ae" data-mc-module-version="2019-10-22">
+                                                                                                    <tbody>
+                                                                                                    <tr>
+                                                                                                        <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: inherit">@(Model.DeliveryFeesOnSalePrice)€</div><div></div></div></td>
+                                                                                                    </tr>
+                                                                                                    </tbody>
+                                                                                                </table>   
                                                                                             }
                                                                                         </td>
                                                                                     </tr>
