--- a/Sheaft.Mailing/Templates/DeliveryForm.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryForm.cshtml
@@ -181,6 +181,18 @@
             </tr>
         }
     }
+    
+    @if (Model.DeliveryFeesWholeSalePrice > 0)
+    {
+        <tr style="padding: 10px 15px;text-align: left;">
+            <td style="padding: 10px 15px;vertical-align: center;">Livraison</td>
+                <td/>
+                <td style="padding: 10px 15px;vertical-align: center; text-align: right;">1</td>
+                <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@Model.DeliveryFeesWholeSalePrice</td>
+                <td style="padding: 10px 15px;vertical-align: center; text-align: right;">20</td>
+                <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@Model.DeliveryFeesOnSalePrice</td>
+        </tr>
+    }
     <tr style="border:none;">
         <td colspan="4" style="border:none;padding: 10px 15px;vertical-align: center; text-align: right;"></td>
         <td style=" padding: 10px 15px;vertical-align: center; text-align: right;">Total HT</td>
