--- a/Sheaft.Mailing/Templates/DeliveryForm.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryForm.cshtml
@@ -34,7 +34,7 @@
 <div style="width:100%; text-align: center;">
     <h1>Bon de livraison <strong>(@Model.Identifier)</strong></h1>
 </div>
-<table style="width:100%; border:none;">
+<table style="padding:50px 0;width:100%; border:none;">
     <tbody>
     <tr>
         <td style="border:none;">
@@ -69,7 +69,7 @@
     </tr>
     </tbody>
 </table>
-<div style="padding:15px 0px">
+<div style="padding:0px 0px 15px 0">
     <p>Date de livraison: <strong>@(Model.DeliveredOn.HasValue ? Model.DeliveredOn.Value.ToString("dd/MM/yyyy") : Model.ScheduledOn.ToString("dd/MM/yyyy"))</strong></p>
 </div>
 <table cellpadding="0" cellspacing="0" align="center" width="100%" role="module" data-type="columns" style="border-collapse:collapse; padding:15px 0px 0px 0px;" bgcolor="#FFFFFF">
