--- a/Sheaft.Mailing/Templates/DeliveryReceipt.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryReceipt.cshtml
@@ -33,27 +33,43 @@
 <div style="width:100%; text-align: center;">
     <h1>Bon de réception <strong>(@Model.Identifier)</strong></h1>
 </div>
-<div style="display: flex; justify-content: space-between">
-    <div style="text-align: left;">
-        <strong>@Model.Producer.Name</strong><br/>
-        @Model.Producer.Email<br/>
-        @Model.Producer.Phone<br/><br/>
-        @Model.Producer.Address.Line1<br/>
-        @if (!string.IsNullOrWhiteSpace(@Model.Producer.Address.Line2))
-        {
-            @Model.Producer.Address.Line2<br/>
-        }
-        @Model.Producer.Address.Zipcode<br/>
-        @Model.Producer.Address.City<br/>
-    </div>
-    <div style="text-align: right;">
-        <strong>@Model.Client.Name</strong><br/>
-        @Model.Client.Email<br/>
-        @Model.Client.Phone<br/>
-    </div>
-</div>
-<div style="padding:15px 0px">
-    <p>Date de livraison: <strong>@Model.ScheduledOn.ToString("dd/MM/yyyy")</strong></p>
+<table style="padding:50px 0;width:100%; border:none;">
+    <tbody>
+    <tr>
+        <td style="border:none;">
+            <div style="text-align: left;">
+                <strong style="font-size: 16px;">@Model.Producer.Name</strong><br/>
+                @Model.Producer.Email<br/>
+                @Model.Producer.Phone<br/>
+                @Model.Producer.Address.Line1<br/>
+                @if (!string.IsNullOrWhiteSpace(@Model.Producer.Address.Line2))
+                {
+                @Model.Producer.Address.Line2<br/>
+                }
+                @Model.Producer.Address.Zipcode<br/>
+                @Model.Producer.Address.City<br/>
+            </div>
+        </td>
+        <td style="border:none;">
+            <div style="text-align: right;">
+                <strong style="font-size: 16px;">@Model.Client.Name</strong><br/>
+                @Model.Client.Email<br/>
+                @Model.Client.Phone<br/>
+
+                @Model.Client.Address.Line1<br/>
+                @if (!string.IsNullOrWhiteSpace(@Model.Client.Address.Line2))
+                {
+                @Model.Client.Address.Line2<br/>
+                }
+                @Model.Client.Address.Zipcode<br/>
+                @Model.Client.Address.City<br/>
+            </div>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<div style="padding:0px 0px 15px 0">
+    <p>Date de livraison: <strong>@(Model.ScheduledOn.ToString("dd/MM/yyyy"))</strong></p>
 </div>
 <div style="padding:15px 0px">
     <p>Commandes</p>
@@ -68,7 +84,7 @@
     <thead>
     <tr style="background-color: #009688;color: #ffffff;text-align: left;">
         <th style="padding: 12px 15px;">Produit</th>
-        <th style="padding: 12px 15px;text-align: center;">Quantité envoyée</th>
+        <th style="padding: 12px 15px;text-align: center;">Quantité à livrer</th>
         <th style="padding: 12px 15px;text-align: center;">Quantité reçue</th>
     </tr>
     </thead>
@@ -81,25 +97,24 @@
             <td style="padding: 10px 15px;vertical-align: center; text-align: right;"></td>
         </tr>
     }
-    <tr style="border:none;">
-        <td colspan="3" style="border:none;padding: 10px;"></td>
-    </tr>
-    <tr style="border:none;">
-        <td colspan="3" style="border:none; padding:10px 0px;">Réceptionnée par :</td>
-    </tr>
     </tbody>
 </table>
 
 <table cellpadding="0" cellspacing="0" align="center" width="100%" role="module" data-type="columns" style="border-collapse:collapse; padding:15px 0px 0px 0px;" bgcolor="#FFFFFF">
     <tbody>
     <tr style="border:none;">
-        <td style="border:none; padding:10px 0px;">
+        <td style="border:none; padding:10px 0;">
+            Livraison réceptionnée par : <strong>@Model.ReceptionnedBy</strong>
+        </td>
+    </tr>
+    <tr style="border:none;">
+        <td style="border:none; padding:10px 0;">
             <strong>Remarques :</strong>
         </td>
     </tr>
-    <tr>
-        <td>
-            <div style="min-height: 120px;border: #dddddd solid 1px; margin: 10px;">@Model.Comment</div>
+    <tr style="border:none!important;">
+        <td style="border:none!important;">
+            <div style="min-height: 120px;border: #dddddd solid 1px; padding: 10px;">@Model.Comment</div>
         </td>
     </tr>
     </tbody>
