--- a/Sheaft.Mailing/Templates/DeliveryReceipt.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryReceipt.cshtml
@@ -33,7 +33,7 @@
 <div style="width:100%; text-align: center;">
     <h1>Bon de réception <strong>(@Model.Identifier)</strong></h1>
 </div>
-<table style="padding:50px 0;width:100%; border:none;">
+<table style="padding:30px 0;width:100%; border:none;">
     <tbody>
     <tr>
         <td style="border:none;">
@@ -100,7 +100,7 @@
     </tbody>
 </table>
 
-<table cellpadding="0" cellspacing="0" align="center" width="100%" role="module" data-type="columns" style="border-collapse:collapse; padding:15px 0px 0px 0px;" bgcolor="#FFFFFF">
+<table cellpadding="0" cellspacing="0" align="center" width="100%" role="module" data-type="columns" style="border-collapse:collapse; padding:15px 0px 0px 0px;" bgcolor="#FFFFFF" style="padding:30px 0 0 0">
     <tbody>
     <tr style="border:none;">
         <td style="border:none; padding:10px 0;">
